Title of index page updated

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="index.css" />
 
-    <title>Login page</title>
+    <title>Login Page</title>
   </head>
   <body>
     <h1 class="text-center text-primary">TODO</h1>
