--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header>
-      <h1>Nikhil's Todo</h1>
+      <h1>Nikhil's Todo app</h1>
     </header>
 
     <form action="">
